// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQCjAcb9YIpxuOE43mgTWWxzg3XxLwanvIwUavyktHSdW7c_"`;

exports[`feature-random should implement random correctly 2`] = `"kQA305Sjo63ID9to0Z8E7xj9KVNR0I05vGSF7b8hAJFwtXs8"`;

exports[`feature-random should implement random correctly 3`] = `"kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQCjAcb9YIpxuOE43mgTWWxzg3XxLwanvIwUavyktHSdW7c_",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 19261n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQCjAcb9YIpxuOE43mgTWWxzg3XxLwanvIwUavyktHSdW7c_",
        "to": "kQA305Sjo63ID9to0Z8E7xj9KVNR0I05vGSF7b8hAJFwtXs8",
        "type": "internal",
        "value": 9967160000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCjAcb9YIpxuOE43mgTWWxzg3XxLwanvIwUavyktHSdW7c_",
      "to": "kQA305Sjo63ID9to0Z8E7xj9KVNR0I05vGSF7b8hAJFwtXs8",
      "type": "internal",
      "value": 9967160000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 17089n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message",
          "type": "text",
        },
        "bounce": true,
        "from": "kQA305Sjo63ID9to0Z8E7xj9KVNR0I05vGSF7b8hAJFwtXs8",
        "to": "kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6",
        "type": "internal",
        "value": 9940388000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Message",
        "type": "text",
      },
      "bounce": true,
      "from": "kQA305Sjo63ID9to0Z8E7xj9KVNR0I05vGSF7b8hAJFwtXs8",
      "to": "kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6",
      "type": "internal",
      "value": 9940388000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 16932n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Message2",
          "type": "text",
        },
        "bounce": true,
        "from": "kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6",
        "to": "kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6",
        "type": "internal",
        "value": 9913765000n,
      },
    ],
    "type": "sent",
  },
  {
    "message": {
      "body": {
        "text": "Message2",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6",
      "to": "kQAvu4J4sG6yCplce4UqzrAEToambazOT76ftXWD5MWCfai6",
      "type": "internal",
      "value": 9913765000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 4364n,
    "type": "processed",
  },
]
`;
